--- a/frontend/src/components/pages/project-list/list.html
+++ b/frontend/src/components/pages/project-list/list.html
@@ -1,60 +1,67 @@
+<ol class="breadcrumb noprint">
+	<li class="active" translate="shared.projects"></li>
+</ol>
 
-<a class="btn btn-primary pull-right" ng-click="$ctrl.createProject()" acl-has-project-creation>
-	<i class="fa fa-plus"></i>
-	<span translate="project.create"></span>
-</a>
+<div style="margin-bottom: 10px">
+	<input type="text" ng-change="$ctrl.filter()" ng-model="$ctrl.filterValue" class="form-control" placeholder="{{'project.filter_placeholder'|translate}}">
+</div>
+<div style="margin-bottom: 10px">
+	<div class="pull-right">
+		<a class="btn btn-primary" ng-click="$ctrl.createProject()" acl-has-project-creation>
+			<i class="fa fa-plus"></i>
+			<span translate="project.create"></span>
+		</a>
 
-<div class="pull-right"  title="{{'project.cant_create'|translate}}" acl-lacks-project-creation style="cursor: not-allowed">
-	<a class="btn btn-primary disabled">
-		<i class="fa fa-plus"></i>
-		<span translate="project.create"></span>
-	</a>
+		<div title="{{'project.cant_create'|translate}}" acl-lacks-project-creation style="cursor: not-allowed">
+			<a class="btn btn-primary disabled">
+				<i class="fa fa-plus"></i>
+				<span translate="project.create"></span>
+			</a>
+		</div>
+	</div>
+
+	<div class="btn-group">
+		<a ng-click="$ctrl.toggleFinished()" class="btn btn-default" ng-class="{active: $ctrl.displayFinished}" translate="project.show_finished_projects"></a>
+		<a ng-click="$ctrl.toggleDeleted()" class="btn btn-default" ng-class="{active: $ctrl.displayDeleted}" translate="project.show_deleted_projects"></a>
+	</div>
 </div>
 
-<ul class="nav nav-tabs" role="tablist">
-	<li ng-class="{active:$ctrl.tab == 'my'}">
-		<a ng-click="$ctrl.changeTab('my')">{{'project.my_projects'|translate}}</a>
-	</li>
-	<li ng-class="{active:$ctrl.tab == 'running'}">
-		<a ng-click="$ctrl.changeTab('running')">{{'project.running'|translate}}</a>
-	</li>
-	<li ng-class="{active:$ctrl.tab == 'finished'}">
-		<a ng-click="$ctrl.changeTab('finished')">{{'project.finished'|translate}}</a>
-	</li>
-</ul>
 
-<br/>
 
-<table class="table table-bordered table-stripped table-condensed">
-	<thead>
-		<tr>
-			<th style="width: 50px"></th>
-			<th><a ng-click="$ctrl.pred='country';rev=!rev">{{'shared.country'|translate}}</a></th>
-			<th><a ng-click="$ctrl.pred='name';rev=!rev">{{'shared.name'|translate}}</a></th>
-			<th><a ng-click="$ctrl.pred='themes';rev=!rev">{{'theme.themes'|translate}}</a></th>
-			<th style="width: 100px;"><a ng-click="$ctrl.pred='start';rev=!rev">{{'shared.start'|translate}}</a></th>
-			<th style="width: 100px;"><a ng-click="$ctrl.pred='end';rev=!rev">{{'shared.end'|translate}}</a></th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr ng-if="$ctrl.displayedProjects.length == 0">
-			<td colspan="6" style="text-align: center" translate="project.noproject">
-		</tr>
-		<tr ng-repeat="project in $ctrl.displayedProjects|orderBy:$ctrl.pred:rev">
-			<td style="text-align: center">
-				<i	class="fa fa-fw fa-eye-slash"
-					ng-if="project.visibility == 'private'"
-					title="{{'project.visibility.private'|translate}}"></i>
+<div>
+	<div class="panel columns-panel"
+		 ng-class="{'panel-default': p.active && p.running, 'panel-dashed': p.active && !p.running, 'panel-deleted': !p.active}"
+		 ng-repeat="p in $ctrl.displayedProjects track by p._id">
 
-				<i	class="fa fa-fw fa-eye"
-					ng-if="project.visibility == 'public'"
-					title="{{'project.visibility.public'|translate}}"></i>
-			</td>
-			<td>{{project.country}}</td>
-			<td><a ng-click="$ctrl.open(project)">{{project.name}}</a></td>
-			<td>{{project.themes|getObjects:$ctrl.themes|pluck:'name'|pluck:$root.language|join:', '}}</td>
-			<td>{{project.start|date}}</td>
-			<td>{{project.end|date}}</td>
-		</tr>
-	</tbody>
-</table>
+		<div class="panel-heading">
+			<div class="panel-title">
+				<i class="fa pull-right fa-user" ng-if="p.isUser" style="margin-top: 3px" title="{{'project.is_user'|translate}}"></i>
+				<i class="fa pull-right fa-star" ng-if="!p.isUser && p.favorite" style="margin-top: 3px; cursor: pointer" ng-click="$ctrl.toggleFavorite(p)"></i>
+				<i class="fa pull-right fa-star-o" ng-if="!p.isUser && !p.favorite" style="margin-top: 3px; cursor: pointer" ng-click="$ctrl.toggleFavorite(p)"></i>
+				{{p.country}}
+			</div>
+		</div>
+		<div class="panel-body">
+			<div>
+				<strong translate="shared.name"></strong>
+				{{p.name}}
+			</div>
+			<div>
+				<strong translate="shared.date"></strong>
+				{{p.start|date}} - {{p.end|date}}
+			</div>
+
+			<div class="panel-buttons">
+				<a ng-if="p.active" class="btn btn-default btn-xxs" ng-click="$ctrl.open(p)" translate="shared.open"></a>
+				<a ng-if="!p.active && p.isOwner" class="btn btn-default btn-xxs" ng-click="$ctrl.restore(p)" translate="shared.restore"></a>
+			</div>
+
+			<div class="bl-info">
+				<div ng-if="!p.active" class="text-danger" translate="project.was_deleted"></div>
+				<div ng-if="p.active && !p.running" class="text-warning" translate="project.is_finished"></div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div ng-if="!$ctrl.displayedProjects.length" translate="project.no_matches"></div>
