--- a/frontend/src/components/pages/project-structure-data-source/data-source-edit.html
+++ b/frontend/src/components/pages/project-structure-data-source/data-source-edit.html
@@ -11,98 +11,100 @@
 <form class="form-horizontal" role="form" name="$ctrl.dsForm" novalidate>
 	<legend translate="project.collection_form_planning"></legend>
 
-	<!-- [name] -->
-	<form-group
-		input-id="input-name"
-		label="shared.name"
-		help="project.collection_edit_help_name">
+	<div class="project-content-inner">
 
-		<input
-			type="text"
-			class="form-control"
-			id="input-name"
-			name="name"
-			ng-model="$ctrl.editableDataSource.name"
-			ng-change="$ctrl.onFieldChange()"
-			placeholder="{{'project.form_name_ph'|translate}}"
-			required />
-		</div>
+		<!-- [name] -->
+		<form-group
+			input-id="input-name"
+			label="shared.name"
+			help="project.collection_edit_help_name">
 
-	</form-group>
-	<!-- [/name] -->
+			<input
+				type="text"
+				class="form-control"
+				id="input-name"
+				name="name"
+				ng-model="$ctrl.editableDataSource.name"
+				ng-change="$ctrl.onFieldChange()"
+				placeholder="{{'project.form_name_ph'|translate}}"
+				required />
 
-	<!-- [collection sites] -->
-	<form-group
-		input-id="collect-input"
-		label="project.collection_site_list"
-		help="project.collection_edit_help_sites">
+		</form-group>
+		<!-- [/name] -->
 
-		<element-filter
-			ng-model="$ctrl.editableDataSource.entities"
-			ng-change="$ctrl.onFieldChange()"
-			elements="$ctrl.project.entities"
-			groups="$ctrl.project.groups"></element-filter>
+		<!-- [collection sites] -->
+		<form-group
+			input-id="collect-input"
+			label="project.collection_site_list"
+			help="project.collection_edit_help_sites">
 
-	</form-group>
-	<!-- [/collection sites] -->
+			<element-filter
+				ng-model="$ctrl.editableDataSource.entities"
+				ng-change="$ctrl.onFieldChange()"
+				elements="$ctrl.project.entities"
+				groups="$ctrl.project.groups"></element-filter>
 
-	<!-- [Periodicity] -->
-	<form-group
-		input-id="periodicity-input"
-		label="project.periodicity"
-		help="project.collection_edit_help_periodicity">
+		</form-group>
+		<!-- [/collection sites] -->
 
-		<select
-			id="periodicity-input"
-			class="form-control"
-			name="periodicity"
-			ng-model="$ctrl.editableDataSource.periodicity"
-			ng-change="$ctrl.onFieldChange()">
-			<option value="day" translate="project.periodicities.day"></option>
-			<option value="month_week_sat" translate="project.periodicities.month_week_sat"></option>
-			<option value="month_week_sun" translate="project.periodicities.month_week_sun"></option>
-			<option value="month_week_mon" translate="project.periodicities.month_week_mon"></option>
-			<option value="week_sat" translate="project.periodicities.week_sat"></option>
-			<option value="week_sun" translate="project.periodicities.week_sun"></option>
-			<option value="week_mon" translate="project.periodicities.week_mon"></option>
-			<option value="month" translate="project.periodicities.month"></option>
-			<option value="quarter" translate="project.periodicities.quarter"></option>
-			<option value="semester" translate="project.periodicities.semester"></option>
-			<option value="year" translate="project.periodicities.year"></option>
-			<option value="free" translate="project.periodicities.free"></option>
-		</select>
-	</form-group>
+		<!-- [Periodicity] -->
+		<form-group
+			input-id="periodicity-input"
+			label="project.periodicity"
+			help="project.collection_edit_help_periodicity">
 
-	<!-- [/Periodicity] -->
+			<select
+				id="periodicity-input"
+				class="form-control"
+				name="periodicity"
+				ng-model="$ctrl.editableDataSource.periodicity"
+				ng-change="$ctrl.onFieldChange()">
+				<option value="day" translate="project.periodicities.day"></option>
+				<option value="month_week_sat" translate="project.periodicities.month_week_sat"></option>
+				<option value="month_week_sun" translate="project.periodicities.month_week_sun"></option>
+				<option value="month_week_mon" translate="project.periodicities.month_week_mon"></option>
+				<option value="week_sat" translate="project.periodicities.week_sat"></option>
+				<option value="week_sun" translate="project.periodicities.week_sun"></option>
+				<option value="week_mon" translate="project.periodicities.week_mon"></option>
+				<option value="month" translate="project.periodicities.month"></option>
+				<option value="quarter" translate="project.periodicities.quarter"></option>
+				<option value="semester" translate="project.periodicities.semester"></option>
+				<option value="year" translate="project.periodicities.year"></option>
+				<option value="free" translate="project.periodicities.free"></option>
+			</select>
+		</form-group>
 
-	<!-- [Specific dates] -->
-	<form-group
-		ng-if="$ctrl.editableDataSource.periodicity !== 'free'"
-		input-id="start-input"
-		label="project.specific_start"
-		help="project.collection_edit_help_start">
+		<!-- [/Periodicity] -->
 
-		<optional-date
-			id="start-input"
-			ng-model="$ctrl.editableDataSource.start"
-			ng-change="$ctrl.onFieldChange()"
-			default="$ctrl.project.start"
-			message="project.same_as_start"></optional-date>
-	</form-group>
+		<!-- [Specific dates] -->
+		<form-group
+			ng-if="$ctrl.editableDataSource.periodicity !== 'free'"
+			input-id="start-input"
+			label="project.specific_start"
+			help="project.collection_edit_help_start">
 
-	<form-group
-		ng-if="$ctrl.editableDataSource.periodicity !== 'free'"
-		input-id="end-input"
-		label="project.specific_end"
-		help="project.collection_edit_help_end">
+			<optional-date
+				id="start-input"
+				ng-model="$ctrl.editableDataSource.start"
+				ng-change="$ctrl.onFieldChange()"
+				default="$ctrl.project.start"
+				message="project.same_as_start"></optional-date>
+		</form-group>
 
-		<optional-date
-			id="end-input"
-			ng-model="$ctrl.editableDataSource.end"
-			ng-change="$ctrl.onFieldChange()"
-			default="$ctrl.project.end"
-			message="project.same_as_end"></optional-date>
-	</form-group>
+		<form-group
+			ng-if="$ctrl.editableDataSource.periodicity !== 'free'"
+			input-id="end-input"
+			label="project.specific_end"
+			help="project.collection_edit_help_end">
+
+			<optional-date
+				id="end-input"
+				ng-model="$ctrl.editableDataSource.end"
+				ng-change="$ctrl.onFieldChange()"
+				default="$ctrl.project.end"
+				message="project.same_as_end"></optional-date>
+		</form-group>
+	</div>
 
 	<!-- [/Specific dates] -->
 
