--- a/frontend/src/components/pages/project-structure-extra-indicators/extra-indicators.html
+++ b/frontend/src/components/pages/project-structure-extra-indicators/extra-indicators.html
@@ -2,7 +2,7 @@
 	<li ng-if="$root.userCtx.type == 'user'"><a ui-sref="main.projects" translate="shared.projects"></a></li>
 	<li class="active" title="{{$ctrl.project.country}}" ng-bind="$ctrl.project.country|maxLength:20"></li>
 	<li class="active" title="{{$ctrl.project.name}}" ng-bind="$ctrl.project.name|maxLength:50"></li>
-	<li class="active" translate="indicator.cross_cutting"></li>
+	<li class="active" translate="indicator.extra"></li>
 </ol>
 
 <div class="alert alert-info" translate="project.extra_indicators_list_info"></div>
@@ -12,6 +12,7 @@
 <div ng-sortable="$ctrl.sortableOptions">
 
 	<indicator
+		class="columns-panel"
 		ng-repeat="indicator in $ctrl.editableProject.extraIndicators"
 		indicator="indicator"
 		project="$ctrl.project"
