--- a/frontend/src/components/pages/project-structure-logical-frame/logframe-list.html
+++ b/frontend/src/components/pages/project-structure-logical-frame/logframe-list.html
@@ -7,62 +7,74 @@
 
 <div class="alert alert-info" translate="project.logical_frame_list_info"></div>
 
-<legend translate="shared.logical_frames"></legend>
 
-<table class="table table-bordered table-stripped table-condensed">
-	<thead>
-		<tr>
-			<th style="width: 30px;"></th>
-			<th translate="shared.name"></th>
-			<th translate="project.goal"></th>
-			<th style="width: 250px"></th>
-		</tr>
-	</thead>
-	<tbody ng-if="$ctrl.editableProject.logicalFrames.length == 0">
-		<tr>
-			<td colspan="4" style="text-align: center" translate="project.no_logical_frames"></td>
-		</tr>
-	</tbody>
-	<tbody ng-sortable="$ctrl.ngSortableOptions">
-		<tr ng-repeat="logicalFrame in $ctrl.editableProject.logicalFrames">
-			<td class="handle"><i class="fa fa-sort fa-fw"></i></td>
-			<td>
-				<a ui-sref="main.project.structure.logical_frame_edition({logicalFrameId: logicalFrame.id})">
-					<span ng-show="logicalFrame.name">{{logicalFrame.name|maxLength:50}}</span>
-					<span ng-hide="logicalFrame.name" translate="project.unnamed_logframe"></span>
+<div ng-sortable="$ctrl.ngSortableOptions">
+	<div class="panel panel-default columns-panel"
+		 ng-repeat="logicalFrame in $ctrl.editableProject.logicalFrames">
+
+		<div class="panel-heading">
+			<div class="panel-title">
+				<i class="fa fa-arrows fa-fw handle"></i>
+				<span ng-show="logicalFrame.name">{{logicalFrame.name}}</span>
+				<span ng-hide="logicalFrame.name" translate="project.unnamed_logframe"></span>
+			</div>
+		</div>
+		<div class="panel-body">
+			<div>
+				<strong translate="shared.date"></strong>
+				{{logicalFrame.start|date}} - {{logicalFrame.end|date}}
+			</div>
+			<div>
+				<strong translate="project.collection_site_list"></strong>
+				{{logicalFrame.entities|getObjects:$ctrl.project.entities|pluck:'name'|join:', '}}
+			</div>
+
+			<div class="panel-buttons btn-group">
+				<a class="btn btn-default btn-xxs"
+				   ui-sref="main.project.structure.logical_frame_edition({logicalFrameId: logicalFrame.id})">
+				   	<i class="fa fa-pencil"></i>
+				   	<span translate="shared.edit"></span>
 				</a>
-			</td>
-			<td>{{logicalFrame.goal}}</td>
-			<td>
-				<i class="fa fa-file-pdf-o"></i>
-				<span translate="project.download_pdf"></span>
-				(<a href="/api/resources/project/{{$ctrl.editableProject._id}}/logical-frame/{{logicalFrame.id}}.pdf?orientation=portrait" target="_blank" translate="shared.portrait"></a>,
-				<a href="/api/resources/project/{{$ctrl.editableProject._id}}/logical-frame/{{logicalFrame.id}}.pdf?orientation=landscape" target="_blank" translate="shared.landscape"></a>)
-			</td>
- 		</tr>
-	</tbody>
-	<tfoot>
-		<tr>
-			<td colspan="4" style="text-align: center">
-				<div uib-dropdown style="display: inline-block;">
-					<a class="btn btn-default btn-xs" href="#" uib-dropdown-toggle>
-						<i class="fa fa-plus"></i>
-						<span translate="shared.add"></span>
+
+				<div class="btn-group" uib-dropdown>
+					<a class="btn btn-default btn-xxs" uib-dropdown-toggle>
 						<span class="caret"></span>
 					</a>
 
 					<ul class="dropdown-menu">
+					  	<li>
+							<a ng-click="$ctrl.onCreateLogicalFrameClicked(logicalFrame)">
+								<i class="fa fa-clipboard"></i>
+								<span translate="form.create_copy"></span>
+							</a>
+					  	</li>
 						<li>
-							<a ng-click="$ctrl.onCreateLogicalFrameClicked()" translate="form.create_blank"></a>
-							<a
-								ng-repeat="logicalFrame in $ctrl.editableProject.logicalFrames"
-								ng-click="$ctrl.onCreateLogicalFrameClicked(logicalFrame)"
-								translate="form.create_copy"
-								translate-values="{name: logicalFrame.name}"></a>
+							<a href="/api/resources/project/{{$ctrl.editableProject._id}}/logical-frame/{{logicalFrame.id}}.pdf?orientation=portrait" target="_blank">
+								<i class="fa fa-file-pdf-o"></i>
+								<span translate="project.download_portrait"></span>
+							</a>
+						</li>
+						<li>
+							<a href="/api/resources/project/{{$ctrl.editableProject._id}}/logical-frame/{{logicalFrame.id}}.pdf?orientation=landscape" target="_blank">
+								<i class="fa fa-file-pdf-o fa-rotate-270"></i>
+								<span translate="project.download_landscape"></span>
+							</a>
+						</li>
+						<li>
+							<a ng-click="$ctrl.delete(logicalFrame)">
+								<i class="fa fa-times text-danger"></i>
+								<span class="text-danger" translate="shared.delete"></span>
+							</a>
 						</li>
 					</ul>
 				</div>
-			</td>
-		</tr>
-	</tfoot>
-</table>
+
+			</div>
+		</div>
+	</div>
+</div>
+
+<a ng-click="$ctrl.onCreateLogicalFrameClicked()" class="btn btn-default">
+	<i class="fa fa-plus"></i>
+	<span translate="form.create_blank"></span>
+</a>
