Make homepage look a bit better

--- a/frontend/src/components/pages/home/home.html
+++ b/frontend/src/components/pages/home/home.html
@@ -65,23 +65,11 @@
 
 	<div ng-switch-when="fr">
 
-		<div class="alert alert-warning">
-			<p>
-				Monitool est un outil de gestion de projet, et non pas de suivi épidémiologique.<br/>
-
-				Son objectif est d'aider à la prise de décision sur les projets, grâce au suivi d'indicateurs qui vous renseigneront sur
-				l'avancement de vos activités, et sur la contribution de ces dernières
-				aux résultats et objectifs fixés par votre programme.<br/>
-
-				Bien qu'il puisse vous y aider, son objectif premier n'est pas de centraliser des fiches
-				de morbidité, qui sont chronophages et n'ont que peu de valeur en gestion de projet, spécialement sur
-				des projets de support aux structures.
-			</p>
-		</div>
-
 		<div class="row">
 			<div class="col-xs-6">
-				<h4>Pourquoi centraliser le suivi des projets</h4>
+				<legend>Pourquoi centraliser le suivi des projets</legend>
+
+				<div class="project-content-inner">
 
 				<ul style="margin-bottom: 10px">
 					<li>
@@ -113,9 +101,11 @@
 						</ul>
 					</li>
 				</ul>
+				</div>
 			</div>
 			<div class="col-xs-6">
-				<h4>Quand utiliser Monitool</h4>
+				<legend>Quand utiliser Monitool</legend>
+				<div class="project-content-inner">
 
 				<p>Monitool joue un rôle pendant quatre étapes d'un projet</p>
 				<ul style="margin-bottom: 10px">
@@ -143,6 +133,22 @@
 						future!
 					</li>
 				</ul>
+				</div>
+
+				<legend>À garder en tête</legend>
+				<div class="project-content-inner">
+					<p>Monitool est un outil de gestion de projet, et non pas de suivi épidémiologique.</p>
+
+					<p>Son objectif est d'aider à la prise de décision sur les projets, grâce au suivi d'indicateurs qui vous renseigneront sur
+					l'avancement de vos activités, et sur la contribution de ces dernières
+					aux résultats et objectifs fixés par votre programme.</p>
+
+					<p>
+						Bien qu'il puisse vous y aider, son objectif premier n'est pas de centraliser des fiches
+					de morbidité, qui sont chronophages et n'ont que peu de valeur en gestion de projet, spécialement sur
+					des projets de support aux structures.
+					</p>
+				</div>
 			</div>
 		</div>
 	</div>
