Fix datasource and logframe delete buttons

--- a/frontend/src/components/pages/project-structure-data-source/data-source-list.html
+++ b/frontend/src/components/pages/project-structure-data-source/data-source-list.html
@@ -58,7 +58,7 @@
 							</a>
 						</li>
 						<li>
-							<a ng-click="$ctrl.delete(dataSource)">
+							<a ng-click="$ctrl.onDeleteClicked(dataSource)">
 								<i class="fa fa-times text-danger"></i>
 								<span class="text-danger" translate="shared.delete"></span>
 							</a>
