--- a/frontend/src/components/pages/project-structure-logical-frame/logframe-list.html
+++ b/frontend/src/components/pages/project-structure-logical-frame/logframe-list.html
@@ -61,7 +61,7 @@
 							</a>
 						</li>
 						<li>
-							<a ng-click="$ctrl.delete(logicalFrame)">
+							<a ng-click="$ctrl.onDeleteClicked(logicalFrame)">
 								<i class="fa fa-times text-danger"></i>
 								<span class="text-danger" translate="shared.delete"></span>
 							</a>
